test/functions/bradc/minmaxDefaultArgs1a.good
minmaxDefaultArgs1a.chpl:1: In function 'foo':
minmaxDefaultArgs1a.chpl:2: error: 'min' used before defined (first used here)
minmaxDefaultArgs1a.chpl:3: error: 'max' used before defined (first used here)
